<resources>
    <string name="app_name">GpsTracker</string>

    <string name="startRecording">Start recording</string>
    <string name="stopRecording">Stop recording</string>
    <string name="manualAcq">Manual acquisition</string>

    <string name="textViewStateStarted">State: Started</string>
    <string name="textViewStateStopped">State: Stopped</string>

    <string name="textViewPositionNone">No positions recorded</string>
    <string name="textViewPosition" formatted="false">Positions: %d - Timeouts: %d</string>

    <string name="textViewStatsNone">No stats available</string>
    <string name="textViewStats" formatted="false">Last results - Ok: %d - Timeouts: %d</string>

    <string name="textViewLastPositionNone">No last position</string>
    <string name="textViewLastPosition">Last position: %s</string>

    <string name="navDrawerOpen">Open</string>
    <string name="navDrawerClose">Close</string>

    <string name="notifAcqServiceTitle">Acquisition in progress</string>
    <string name="notifAcqServiceMessage" formatted="false">%d positions - %d timeouts</string>

    <string name="pref_gps_accuracy_title">GPS accuracy</string>
    <string name="pref_gps_accuracy_summary">Accuracy required to accept a location (meters)</string>

    <string name="pref_gps_period_title">GPS acquisition period</string>
    <string name="pref_gps_period_summary">Duration before next acquisition (seconds)</string>

    <string name="pref_gps_timeout_title">GPS acquisition timeout</string>
    <string name="pref_gps_timeout_summary">Maximum duration to get a fix (seconds)</string>

    <string name="about_version">Version</string>
    <string name="about_build_date">Build date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
