<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="fr.rtwo.gpstracker.FragmentRecord">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/startRecording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startRecording"/>

        <Button
            android:text="@string/stopRecording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stopRecording"/>

        <Button
            android:id="@+id/manualAcq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manualAcq"/>

        <TextView
            android:text="@string/textViewStateStopped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/state"/>

        <TextView
            android:text="@string/textViewPositionNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/positionsCount"/>

        <TextView
            android:text="@string/textViewStatsNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/positionsStats"/>

        <TextView
            android:text="@string/textViewLastPositionNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastPosition"/>
    </LinearLayout>
</FrameLayout>
