<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.rtwo.gpstracker.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/startRecording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startRecording"
            android:onClick="startGpsRecording"/>

        <Button
            android:text="@string/stopRecording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stopRecording"
            android:onClick="stopGpsRecording"/>

        <TextView
            android:text="@string/textViewStateStopped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/state"/>

        <TextView
            android:text="@string/textViewPositionNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/positionsCount"/>

        <TextView
            android:text="@string/textViewLastPositionNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastPosition"/>
    </LinearLayout>
</LinearLayout>
